--- a/GameStart/Storyboard/Base.lproj/Main.storyboard
+++ b/GameStart/Storyboard/Base.lproj/Main.storyboard
@@ -124,6 +124,9 @@
                                         <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="LoginBtn:" destination="Ebq-9S-ngE" eventType="touchUpInside" id="agz-ir-dxe"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C4a-FX-nrK">
                                 <rect key="frame" x="36" y="450" width="302" height="40"/>
@@ -133,7 +136,7 @@
                                 </constraints>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="password"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="paddingLeftCustom">
                                         <real key="value" value="10"/>
@@ -151,7 +154,7 @@
                                 </constraints>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="username"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="paddingLeftCustom">
                                         <real key="value" value="10"/>
@@ -193,6 +196,7 @@
                         <outlet property="ApplyBtnView" destination="xoV-TX-W1I" id="JHl-kt-6S2"/>
                         <outlet property="LoginTextView" destination="W30-EG-VWj" id="u4L-LK-PZX"/>
                         <outlet property="PasswdTextView" destination="C4a-FX-nrK" id="ts1-dI-Awg"/>
+                        <segue destination="vSk-4i-b4t" kind="presentation" identifier="ToRoom" id="lRC-v4-zsH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Xu-yg-ctV" userLabel="First Responder" sceneMemberID="firstResponder"/>
